[package]
name = "peer-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.8.1"
bgpkit-broker = "0.5.1"
ipnetwork = "0.18.0"

serde = {version="1", features=["derive"]}
serde_json = {version = "1.0", features = ["std"]}

tracing = "0.1"
tracing-subscriber = "0.3.3"

indicatif = "0.15"

rayon = "1.5.1"
bzip2 = "0.4.3"
clap = { version = "4.1.8", features = ["derive"] }
oneio = {version = "0.7.2", features = ["lib_only"]}

walkdir = "2.3.2"
rusqlite = { version = "0.28.0", features = ["bundled"] }

anyhow = "1.0"
chrono = "0.4.19"

itertools = "0.10"

[[bin]]
name = "peer-stats-single-file"
path = "src/bin/single-file.rs"

[[bin]]
name = "peer-stats-bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "peer-stats-index"
path = "src/bin/index-peer-stats.rs"

[[bin]]
name = "as2rel-index"
path = "src/bin/index-as2rel.rs"

[[bin]]
name = "pfx2as-index"
path = "src/bin/index-pfx2as.rs"
