[package]
name = "peer-stats"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bgpkit-parser = "0.10.11"
bgpkit-broker = "0.7.5"
ipnet = "2.7.2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }

tracing = "0.1"
tracing-subscriber = "0.3.3"

indicatif = "0.15"

rayon = "1.5.1"
bzip2 = "0.4.3"
clap = { version = "4.1.8", features = ["derive"] }
oneio = "0.17.0"

walkdir = "2.3.2"
rusqlite = { version = "0.32", features = ["bundled"] }

anyhow = "1.0"
chrono = "0.4.19"

itertools = "0.13.0"
num_cpus = "1"


[[bin]]
name = "peer-stats-single-file"
path = "src/bin/single-file.rs"

[[bin]]
name = "peer-stats-bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "peer-stats-index"
path = "src/bin/index-peer-stats.rs"

[[bin]]
name = "as2rel-index"
path = "src/bin/index-as2rel.rs"

[[bin]]
name = "pfx2as-index"
path = "src/bin/index-pfx2as.rs"
